Refactor main application structure and add account panel component

--- a/public/scss/global.scss
+++ b/public/scss/global.scss
@@ -36,8 +36,13 @@
 	box-sizing: border-box;
 }
 
+*:focus {
+	outline: none;
+}
+
 body {
 	font-family: 'segoeui', sans-serif;
+	color: var(--txt-2);
 }
 
 .icon {
