Add spinning animation to icon component

--- a/public/scss/global.scss
+++ b/public/scss/global.scss
@@ -49,4 +49,17 @@ body {
 .icon {
 	font-family: 'Material Symbols Outlined';
 	user-select: none;
+
+	&.spin {
+		animation: spin 1s linear infinite;
+	}
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
