--- a/public/scss/panel.scss
+++ b/public/scss/panel.scss
@@ -1,13 +1,19 @@
+body {
+	--radius: 0.5em;
+}
+
+// Default panel styles
 .panel,
 input,
+textarea,
 button {
-	--radius: 0.5em;
 	border-radius: var(--radius);
 	background-color: var(--bg-3);
 	overflow: hidden;
 	border: 1px solid var(--bg-1);
 }
 
+// Hover effect
 button:hover,
 .hoverable:hover {
 	background-color: var(--bg-4);
@@ -18,4 +24,25 @@ button {
 	padding: 0.7em 1em;
 	font-size: 1rem;
 	color: var(--txt-2);
+}
+
+// Panel wrapper
+.panel-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 1px;
+	border-radius: var(--radius);
+	overflow: hidden;
+	border: 1px solid var(--bg-1);
+	background-color: var(--bg-1);
+
+	&.sideways {
+		flex-direction: row;
+		min-height: fit-content;
+	}
+
+	& > * {
+		border-radius: 0;
+		border: none;
+	}
 }
